@@ -1,3 +1,7 @@
+2004-03-15  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/common/fileops.cxx (tmpnam): Only close if open() succeded.
+
 2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/input/vfscanf.cxx (vfscanf): Silence warning.
